<resources>
    <string name="app_name">DoodlzApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="button_erase">Erase Image</string>
    <string name="button_set_color">Set Color</string>
    <string name="button_set_line_width">Set Line Width</string>
    <string name="line_imageview_description">This displays the line thickness</string>
    <string name="label_alpha">Alpha</string>
    <string name="label_red">Red</string>
    <string name="label_green">Green</string>
    <string name="label_blue">Blue</string>
    <string name="menuitem_color">Color</string>
    <string name="menuitem_delete">Erase All Drawing</string>
    <string name="menuitem_earse">Erase</string>
    <string name="menuitem_line_width">Line Width</string>
    <string name="menuitem_bucket">Paint bucket</string>
    <string name="menuitem_save">Save</string>
    <string name="menuitem_print">Print</string>
    <string name="menuitem_undo">Undo</string>
    <string name="menuitem_redo">Redo</string>
    <string name="menuitem_fill">Fill</string>
    <string name="menuitem_Rectangle">Rectangle</string>
    <string name="menuitem_circle">Circle</string>
    <string name="menuitem_default_brush">Default brush</string>
    <string name="menuitem_blur">Blur brush</string>
    <string name="message_erase">Erase the drawing?</string>
    <string name="message_error_saving">There was an error saving the image</string>
    <string name="message_saved">Your saved painting can be viewed in the Photos app by  selecting Device Folders from that app\\\'s menu</string>
    <string name="message_error_printing">Your device does not support printing</string>
    <string name="permission_explanation">To save an image, the app requires permission to write to external storage</string>
    <string name="title_color_dialog">Choose Color</string>
    <string name="title_line_width_dialog">Choose Line Width</string>
</resources>